feat: added server deletion and documentation
